--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,19 @@
+@import "@/styles/themes/lightTheme.css";
+@import "@/styles/themes/accessibleTheme.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  html {
+    --color-primary: #ffd700;
+    --color-secondary: #003366;
+    --color-buttons: #f5af19;
+    --color-button-text: #121212;
+    --color-typography: #e0e0e0;
+    --color-typography-secondary: #a8a8a8;
+    --color-accent: #c8001e;
+    --color-background: #121212;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
